Istio/Istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: xyz-istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.xyz.com'
    - xyz.com
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*.xyz.com'
    - xyz.com
    port:
      name: https-443
      number: 443
      protocol: HTTPS
    tls:
      credentialName: xyz-cert
      mode: SIMPLE
